##Text encoding: utf-8

2016-06-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/mathtool.h: add a help tag.
	* docs/help/paint/C: updated user documentation.

2016-06-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/functions.cc: backported new functions from trunk.
	* gnumeric/plugin.xml.in.in: ditto.
	* libs/gcu/chemistry.cc: ditto.
	* libs/gcu/chemistry.h: ditto.

2016-06-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/elements.xml.in: update names for elements 113, 115, 177 and 118.

2016-06-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fix crash when deleting a bond outside a molecule.
	[#48256]

2016-06-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fix change of the abs() function  signature with
	recent g++.

2016-05-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: make lasem use optional.
	* libs/gccv/Makefile.am: ditto.
	* plugins/paint/text/Makefile.am: ditto.
	* plugins/paint/text/plugin.cc: ditto.

2016-05-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/line.cc: fix crossing bonds rendering.

2016-05-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* all files: backport display and math equation support from trunk.

2016-05-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: restore canvas background with gtk+-3.20.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/view.cc: ditto.

2016-04-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fix gcc-6/g++-6 warnings.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcr/gcrcrystalviewer.cc: ditto.
	* libs/gcu/application.cc: ditto.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcugtk/chem3dwindow.cc: ditto.
	* libs/gcugtk/molecule.cc: ditto.
	* libs/gcugtk/spectrumdoc.cc: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* programs/crystal/document.cc: ditto.
